--- a/Capstone-Project.ipynb
+++ b/Capstone-Project.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "(968833, 28)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "4  14400    TITUS                        ST  34.2198 -118.4468  "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
        "Name: Vict Sex, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,27 +605,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                          Black\n",
-       "1         Hispanic/Latin/Mexican\n",
-       "2                        Unknown\n",
-       "3                          White\n",
-       "4                        Unknown\n",
-       "                   ...          \n",
-       "968828    Hispanic/Latin/Mexican\n",
-       "968829                     White\n",
-       "968830                   Unknown\n",
-       "968831    Hispanic/Latin/Mexican\n",
-       "968832                     Black\n",
+       "0         Unknown\n",
+       "1         Unknown\n",
+       "2         Unknown\n",
+       "3         Unknown\n",
+       "4         Unknown\n",
+       "           ...   \n",
+       "968828    Unknown\n",
+       "968829    Unknown\n",
+       "968830    Unknown\n",
+       "968831    Unknown\n",
+       "968832    Unknown\n",
        "Name: Vict Descent, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
        "Name: Weapon Desc, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
        "(968833, 17)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.001\n",
       "Method:                 Least Squares   F-statistic:                     342.8\n",
       "Date:                Wed, 14 Jun 2023   Prob (F-statistic):           1.73e-76\n",
-      "Time:                        18:16:24   Log-Likelihood:            -2.4329e+06\n",
+      "Time:                        22:33:47   Log-Likelihood:            -2.4329e+06\n",
       "No. Observations:              355971   AIC:                         4.866e+06\n",
       "Df Residuals:                  355969   BIC:                         4.866e+06\n",
       "Df Model:                           1                                         \n",
@@ -972,11 +972,14 @@
     }
    ],
    "source": [
-    "# Select the relevant columns for regression\n",
-    "df_selected = df[['Vict Age', 'Vict Sex', 'Crm Cd']]\n",
+    "# Calculate the count of each crime code\n",
+    "crime_code_count = df['Crm Cd'].value_counts()\n",
     "\n",
-    "# Filter the dataset for female victims only\n",
-    "df_female = df_selected[df_selected['Vict Sex'] == 'Female']\n",
+    "# Create a new column 'Crime_Code_Count' with the count of each crime code\n",
+    "df['Crime_Code_Count'] = df['Crm Cd'].map(crime_code_count)\n",
+    "\n",
+    "# Select the relevant columns for regression\n",
+    "df_selected = df[['Vict Age', 'Crime_Code_Count']]\n",
     "\n",
     "# Dependent variable\n",
     "y = df_female['Crm Cd']\n",
@@ -992,14 +995,6 @@
     "results = model.fit()\n",
     "\n",
     "print(results.summary())"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Overall, the regression analysis suggests that there is a statistically significant relationship between Vict Age and Crm Cd for female victims. However, the low R-squared value suggests that Vict Age alone explains only a small portion of the variation in Crm Cd."
    ]
   }
  ],
