--- a/Capstone-Project.ipynb
+++ b/Capstone-Project.ipynb
@@ -996,6 +996,14 @@
     "\n",
     "print(results.summary())"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overall, the regression model suggests that the independent variable 'Vict Age' has a statistically significant but very weak negative relationship with the dependent variable 'Crm Cd'. However, since the R-squared value is very low, the 'Vict Age' variable explains only a minimal amount of the variance in 'Crm Cd'."
+   ]
   }
  ],
  "metadata": {
