--- a/Capstone-Project.ipynb
+++ b/Capstone-Project.ipynb
@@ -838,6 +838,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_json('df')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
