--- a/Capstone-Project.ipynb
+++ b/Capstone-Project.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,11 +839,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_json('df')"
+    "filepath = Path('clean_crime_data.csv')\n",
+    "filepath.parent.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "df.to_csv(filepath, index=False)"
    ]
   },
   {
@@ -864,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -957,8 +960,8 @@
       "Dep. Variable:                 Crm Cd   R-squared:                       0.001\n",
       "Model:                            OLS   Adj. R-squared:                  0.001\n",
       "Method:                 Least Squares   F-statistic:                     342.8\n",
-      "Date:                Wed, 14 Jun 2023   Prob (F-statistic):           1.73e-76\n",
-      "Time:                        22:33:47   Log-Likelihood:            -2.4329e+06\n",
+      "Date:                Thu, 15 Jun 2023   Prob (F-statistic):           1.73e-76\n",
+      "Time:                        00:34:13   Log-Likelihood:            -2.4329e+06\n",
       "No. Observations:              355971   AIC:                         4.866e+06\n",
       "Df Residuals:                  355969   BIC:                         4.866e+06\n",
       "Df Model:                           1                                         \n",
