--- a/Capstone-Project.ipynb
+++ b/Capstone-Project.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Lighthouse Lab Mid-Term\n",
-    "## Capstone Project\n",
+    "## Capstone Project Part 1\n",
     "### Dataset: Los Angeles Crime Data Since 2020 to Present"
    ]
   },
