--- a/Capstone-Project-Part1.ipynb
+++ b/Capstone-Project-Part1.ipynb
@@ -20,16 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +242,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +539,7 @@
        "4  14400    TITUS                        ST  34.2198 -118.4468  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +582,7 @@
        "Name: Vict Sex, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,27 +606,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0         Unknown\n",
-       "1         Unknown\n",
-       "2         Unknown\n",
-       "3         Unknown\n",
-       "4         Unknown\n",
-       "           ...   \n",
-       "968828    Unknown\n",
-       "968829    Unknown\n",
-       "968830    Unknown\n",
-       "968831    Unknown\n",
-       "968832    Unknown\n",
+       "0                          Black\n",
+       "1         Hispanic/Latin/Mexican\n",
+       "2                        Unknown\n",
+       "3                          White\n",
+       "4                        Unknown\n",
+       "                   ...          \n",
+       "968828    Hispanic/Latin/Mexican\n",
+       "968829                     White\n",
+       "968830                   Unknown\n",
+       "968831    Hispanic/Latin/Mexican\n",
+       "968832                     Black\n",
        "Name: Vict Descent, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +684,7 @@
        "Name: Weapon Desc, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +727,7 @@
        "(968833, 17)"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +764,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,14 +775,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of duplicate rows:  (20811, 17)\n"
+      "number of duplicate rows:  (0, 17)\n"
      ]
     }
    ],
@@ -793,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +829,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
